@@ -2,10 +2,12 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.04 [20090826] [svn: r124]
+ChangeLog for sdparm-1.04 [20090829] [svn: r125]
   - add SAT ATA Power condition mode page (sat2r06)
   - sync with spc4r21
   - add Power condition, update extended inquiry VPD pages
+  - smc3: add Device capabilities + Extended device
+    capabilities + Transport geometry parameters mode pages
   - prepare for Thin provisioning VPD and mode pages
   - expand block limits VPD page
   - update Power condition mode page
